[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "opentelemetry-instrumentation-pubsub"
description = 'Instrument Open Telemetry tracing within the GCP PubSub library'
readme = 'README.md'
dynamic = ['version']
license = {file = "LICENSE"}
authors = [
  {email = "tombennett86@hotmail.co.uk"},
  {name = "Tom Bennett"},
]
maintainers = [
  {name = "Tom Bennett", email = "tombennett86@hotmail.co.uk"},
]
requires-python = '>=3.7'
dependencies = [
    "opentelemetry-api ~= 1.12",
    "opentelemetry-instrumentation == 0.33b0",
    "google-cloud-pubsub ~= 2.13",
    "wrapt ~= 1.14",
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]

[project.optional-dependencies]
dev = [
    "black==22.3.0",
    "isort==5.10.1",
    "twine==4.0.0",
]
test = [
    "flake8==4.0.1",
    "pytest==7.1.2",
    "pytest-mock==3.8.2",
    "wrapt ~= 1.14",
    "opentelemetry-test-utils == 0.33b0",
    "google-cloud-pubsub ~= 2.13",
]
build = [
    'build'
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
skip-string-normalization = 1

[tool.setuptools_scm]
write_to = "pubsub_opentelemetry/version.py"

[tool.pytest.ini_options]
addopts = "--junitxml=./report.xml"
testpaths = [
    "tests",
]
