[build-system]
requires = ["setuptools>=42", "wheel", "toml", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "opentelemetry-instrumentation-pubsub"
description = 'Instrument Open Telemetry tracing within the GCP PubSub library'
readme = 'README.md'
dynamic = ['version']
license = {file = "LICENCE"}
authors = [
  {email = "mrtbennett@outlook.com"},
  {name = "Tom Bennett"},
]
maintainers = [
  {name = "Tom Bennett", email = "mrtbennett@outlook.com"},
]
requires-python = '>=3.7'
dependencies = [
    "opentelemetry-api ~= 1.12",
    "opentelemetry-instrumentation == 0.33b0",
    "google-cloud-pubsub ~= 2.13",
    "wrapt ~= 1.14",
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]

[project.optional-dependencies]
dev = [
    "black==22.3.0",
    "isort==5.10.1",
    "twine==4.0.0",
    "mypy==0.971",
    "importlib_metadata",
]
test = [
    "flake8 ~= 4.0",
    "pytest-mock ~= 3.8",
    "pytest ~= 7.1",
    "wrapt ~= 1.14",
    "opentelemetry-test-utils == 0.33b0",
    "google-cloud-pubsub ~= 2.13",
    "tox ~= 3.25",
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
skip-string-normalization = 1

[tool.setuptools]
packages = ["pubsub_opentelemetry"]

[tool.setuptools_scm]
write_to = "pubsub_opentelemetry/version.py"

[tool.pytest.ini_options]
addopts = "--junitxml=./reports/report.xml"
testpaths = [
    "tests",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37,py38,py39,py310
isolated_build = True

[testenv]
deps =
    pytest
    pytest-mock
    wrapt
    opentelemetry-test-utils
    google-cloud-pubsub
    importlib_metadata
commands = pytest --junitxml=./reports/{envname}-report.xml
"""

[tool.mypy]
ignore_missing_imports = "True"
namespace_packages = "True"
pretty = "True"
show_error_codes = "True"
implicit_reexport = "True"
warn_unreachable = "True"
